<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>qSlicerLoadableModuleTemplateModuleWidget</class>
 <widget class="qSlicerWidget" name="qSlicerLoadableModuleTemplateModuleWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>316</width>
    <height>518</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout_3">
   <item row="0" column="0">
    <widget class="ctkCollapsibleButton" name="CTKCollapsibleButton" native="true">
     <property name="text" stdset="0">
      <string>Display</string>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
       <widget class="ctkCollapsibleButton" name="FooBarCollapsibleButtonWidget" native="true">
        <layout class="QGridLayout" name="gridLayout_4">
         <item row="0" column="0">
          <widget class="qSlicerLoadableModuleTemplateFooBarWidget" name="FooBar" native="true"/>
         </item>
        </layout>
       </widget>
      </item>
      <item row="0" column="0">
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="0">
         <widget class="QLabel" name="RTPlanNodeLabel">
          <property name="text">
           <string>RTPlan node:</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="qMRMLNodeComboBox" name="RTPlanNodeComboBox" native="true"/>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="RTBeamNodeLabel">
          <property name="text">
           <string>Beam node:</string>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
         <widget class="qMRMLNodeComboBox" name="RTBeamNodeComboBox" native="true"/>
        </item>
        <item row="3" column="0">
         <widget class="QLabel" name="ReferenceVolumeLabel">
          <property name="text">
           <string>Reference volume:</string>
          </property>
         </widget>
        </item>
        <item row="2" column="0" colspan="2">
         <widget class="Line" name="line">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
        <item row="3" column="1">
         <widget class="qMRMLNodeComboBox" name="ReferenceVolumeNodeComboBox" native="true"/>
        </item>
        <item row="4" column="0">
         <widget class="QLabel" name="TargetVolumeLabel">
          <property name="text">
           <string>Target volume:</string>
          </property>
         </widget>
        </item>
        <item row="4" column="1">
         <widget class="qMRMLSegmentSelectorWidget" name="TargetVolumeSegmentSelectorWidget" native="true"/>
        </item>
       </layout>
      </item>
      <item row="2" column="0">
       <widget class="QPushButton" name="CalculateOpeningPushButton">
        <property name="text">
         <string>Calculate Opening</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item row="1" column="0">
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>qMRMLNodeComboBox</class>
   <extends>QWidget</extends>
   <header location="global">qMRMLNodeComboBox.h</header>
  </customwidget>
  <customwidget>
   <class>qSlicerWidget</class>
   <extends>QWidget</extends>
   <header>qSlicerWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>ctkCollapsibleButton</class>
   <extends>QWidget</extends>
   <header>ctkCollapsibleButton.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qSlicerLoadableModuleTemplateFooBarWidget</class>
   <extends>QWidget</extends>
   <header>qSlicerLoadableModuleTemplateFooBarWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qMRMLSegmentSelectorWidget</class>
   <extends>QWidget</extends>
   <header>qMRMLSegmentSelectorWidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections>
  <connection>
   <sender>qSlicerLoadableModuleTemplateModuleWidget</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>RTBeamNodeComboBox</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>157</x>
     <y>258</y>
    </hint>
    <hint type="destinationlabel">
     <x>228</x>
     <y>51</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qSlicerLoadableModuleTemplateModuleWidget</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>RTPlanNodeComboBox</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>157</x>
     <y>258</y>
    </hint>
    <hint type="destinationlabel">
     <x>228</x>
     <y>27</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qSlicerLoadableModuleTemplateModuleWidget</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>ReferenceVolumeNodeComboBox</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>157</x>
     <y>258</y>
    </hint>
    <hint type="destinationlabel">
     <x>228</x>
     <y>84</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qSlicerLoadableModuleTemplateModuleWidget</sender>
   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
   <receiver>TargetVolumeSegmentSelectorWidget</receiver>
   <slot>setMRMLScene(vtkMRMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>157</x>
     <y>258</y>
    </hint>
    <hint type="destinationlabel">
     <x>228</x>
     <y>132</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
